spacing projects/education fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -884,8 +884,11 @@ a:hover {
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
-.portfolio-details {
-  padding-top: 40px;
+.portfolio-details div div div div img{
+  padding-top: 30px;
+}
+.portfolio-details div div div img{
+  padding-top: 0;
 }
 .portfolio-details .portfolio-details-slider img {
   width: 100%;
@@ -907,7 +910,7 @@ a:hover {
 .portfolio-details .portfolio-info {
   padding: 30px;
   box-shadow: 0px 0 30px rgba(78, 78, 78, 0.08);
-  height: 92.5%;
+  height: 100%;
 }
 .portfolio-details .portfolio-info h3 {
   font-size: 22px;
